# pyblock

./: .dockerignore  .gitignore  AUDIT_REPORT.json  AUDIT_REPORT.md  Dockerfile  EXECUTE-MyNodeBTC.txt  LICENSE  PR_ORACLEVISION.md  PR_ORACLEVISION_V2.2.md  PyBLOCK-Bitaxe.scriptable  PyBLOCK-Widget.scriptable  PyBLØCK Widget.scriptable  PyBlock.py  PyBlockHalving.scriptable  Python-BlockClock.py  PythonBlockClock.py  README.md  apisnd.py  clone.py  dockerfile  donation.py  entrypoint.sh  feed.py  fxmain.py  index.md  install-full-node.sh  install-full-tor-node.sh  knots-and-ckpool-solo.sh  knotsbip110-and-ckpool-solo.sh  logos.py  migrate_config.py  nodeconnection.py  nostr_console  pblogo.py  ppi.py  pure-and-ckpool-solo.sh  pyproject.toml  requirements.txt  ssaver.py  sysinf.py  (+4 more)
.github/ISSUE_TEMPLATE/: Add Your Tool To PyBLOCK  Add Your Tool To PyBLOCK.md
.github/workflows/: PyBLOCK-PyPi.yml  Testpypi.yml  docker-build.yml  publish-to-test-pypi-Ok.yml  publish.yml  pypi.yml  python-package-test-pyblock.yml  python-publish-test.yml  python-publish.yml  release.yaml  test-pypi.yml  test.yml
docs/: ASTROLEXIS_TEAM_BRIEF.md  ROADMAP_AI_BACKEND.md
downloads/: Welcome.txt
nostr_console/: nostr_console_elf64
pybitblock/: BTCAnalyzer.sh  PyBlock.py  SHS.py  UTXOracle.py  WebSocket-BitNodes.py  WebSocket-Bitaxe-Logs.py  WebSocket-LiveTxs.py  apisnd.py  block_explorer.py  block_visualizer.py  block_viz.py  btcsupply.py  clockscript.py  clockscriptREMOTE.py  clone.py  config.py  console.py  donation.py  execute_load_config.py  feed.py  imgterminal.py  lastblockdetail.py  lnd.py  log.py  masOS  mempool_monitor.py  mempoolclock.py  menu.py  node_monitor.py  nodeconnection.py  pblogo.py  peers_monitor.py  ppi.py  rebalance.py  sha256.py  sha512.py  sysinf.py  test.py  tx_search.py
pybitblock/SPV/: 7Blocks.py  PyBlock-SPV.py  PyBlockMiner.py  PyVanityGen.py  PyVanityGenerator.py  SHS.py  apisnd.py  clockscript.py  clone.py  console.py  donation.py  feed.py  imgterminal.py  mempoolclock.py  nodeconnection.py  pblogo.py  ppi.py  sha256.py  spvblock.py  sysinf.py
pybitblock/SPV/config/: bclock.conf  init.conf  pyblocksettings.conf  selection.conf  slushAPI.conf
pybitblock/ai/: __init__.py  client.py  context.py  ui.py
pybitblock/clock/: __init__.py  animations.py  data.py  generative.py  renderer.py  sound.py  sparkline.py  widgets.py
pybitblock/config/: bclock.conf.example  blndconnect.conf.example  oraclevision.conf.example  pyblocksettings.conf.example
pybitblock/oraclevision/: __init__.py  address_service.py  addresses.py  bip110.py  bitcoin_cli.py  config.py  markup.py  mempool_compose.py  script_parser.py  security.py  spam_score.py  tx_flow.py  tx_service.py  ui.py
pybitblock/oraclevision/detectors/: __init__.py  builtin.py
pybitblock/shared/: display.py  formatting.py  rich_ui.py  ui.py
pybitblock/terminal_matrix/: README.md
pybitblock/tests/oraclevision/: test_addresses.py  test_detectors.py  test_tx_flow.py
pybitblock/tui/: __init__.py  app.py
pybitblock/tui/screens/: __init__.py  main_menu.py
pybitblock/tui/widgets/: __init__.py  main_menu.py  status_bar.py
pybitblock/tui/workers/: __init__.py  data_fetcher.py
pybitblock/utxoracle/: UTXOracle.py
pyblock/: clockscriptREMOTE.py  console.py  pblogo.py
terminal_matrix/: matrix.py
umbrel/: README.md  bitcoin-cli-wrapper.sh  docker-compose.yml  lncli-wrapper.sh  umbrel-app.yml
warden_terminal/: ansi_management.py  config.ini  connections.py  dashboard.py  data.py  decorators.py  node_warden.py  pricing_engine.py  welcome.py
warden_terminal/dependencies/ansi/: _compat.py  color.py  cursor.py  sequence.py
(+8 files in other folders)
