[tool.poetry]
name = "pybitblock"
version = "2.7.1"
description = "â„™ğ•ªğ”¹ğ•ƒğ•†â„‚ğ•‚ ğ•šğ•¥ğ•¤ ğ•’ ğ”¹ğ•šğ•¥ğ•”ğ• ğ•šğ•Ÿ ğ”»ğ•’ğ•¤ğ•™ğ•“ğ• ğ•’ğ•£ğ•• ğ•¨ğ•šğ•¥ğ•™ â„‚ğ•ªğ•¡ğ•™ğ•–ğ•£ğ•¡ğ•¦ğ•Ÿğ•œ ğ•’ğ•–ğ•¤ğ•¥ğ•™ğ•–ğ•¥ğ•šğ•”."
license="MIT"
authors = ["curly60e <curly60e@piserver.xyz>", "SN"]
readme="README.md"
repository="https://github.com/curly60e/pyblock"
homepage="https://github.com/curly60e/pyblock"

[tool.poetry.dependencies]
python = "^3.12"
art = "*"
qrcode = "*"
psutil = "*"
simplejson = "*"
certifi = "*"
chardet = "*"
idna = "*"
python-gnupg = "*"
sseclient-py = "*"
urllib3 = "*"
xmltodict = "*"
python-cfonts = "*"
termcolor = "*"
pycoingecko = "*"
protobuf = "*"
six = "*"
robohash = "*"
Pillow = "*"
numpy = "*"
googleapis-common-protos = "*"
pdfminer = "*"
typer = "*"
jq = "*"
html2text = "*"
pdf2text = "*"
pdf2txt = "*"
embit = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyblock = "pybitblock.console:main"
